--- a/src/app/layouts/startchat/startchat.component.html
+++ b/src/app/layouts/startchat/startchat.component.html
@@ -6,14 +6,14 @@
       <img src="/images/logo.png" alt="Mohawk Medbuy Logo" class="logo" />
       <div class="spacer"></div>
       <div class="signin">
-        <button mat-raised-button class="button">
+        <!-- <button mat-raised-button class="button" >
           <img src="/images/newchat.png" alt="New Chat" class="icon" />
           New Chat
-        </button>
-        <button mat-raised-button class="button">
+        </button> -->
+        <!-- <button mat-raised-button class="button">
           <img src="/images/history.png" alt="History" class="icon" />
           History
-        </button>
+        </button> -->
       </div>
     </mat-toolbar>
 
@@ -21,26 +21,43 @@
       <h2>Welcome to Mohawk.</h2>
       <p class="subtext">How can I help you today?</p>
       
+      <!-- Chat messages container -->
+ <!-- Replace the chat-container div with this: -->
+<div class="chat-container">
+  <div *ngFor="let message of messages" class="message-container">
+    <div class="message" [class.user-message]="message.isUser" [class.bot-message]="!message.isUser">
+      <div class="message-content">
+        {{ message.text }}
+      </div>
+      <div class="message-time">
+        {{ message.timestamp  }}
+      </div>
+    </div>
+  </div>
+</div>
       <div class="detail">
-        <mat-form-field appearance="outline" class="chat-input">
-          <textarea
-            matInput
-            cdkTextareaAutosize
-            cdkAutosizeMinRows="1"
-            cdkAutosizeMaxRows="6"
-            placeholder="What do you want to know?"
-            formControlName="text"
-          ></textarea>
+        <form [formGroup]="chatForm" (ngSubmit)="sendMessage()">
+          <mat-form-field appearance="outline" class="chat-input">
+            <textarea
+              matInput
+              cdkTextareaAutosize
+              cdkAutosizeMinRows="1"
+              cdkAutosizeMaxRows="6"
+              placeholder="What do you want to know?"
+              formControlName="question"
+              class="no-scroll"
+            ></textarea>
 
-          <span matSuffix>
-            <button mat-icon-button>
-              <img src="/images/voiceinput.png" alt="Voice Input" class="icons" />
-            </button>
-            <button mat-icon-button color="primary">
-              <img src="/images/rightarrow.png" alt="Send" class="icons" />
-            </button>
-          </span>
-        </mat-form-field>
+            <span matSuffix>
+              <button mat-icon-button>
+                <img src="/images/voiceinput.png" alt="Voice Input" class="icons" />
+              </button>
+              <button mat-icon-button color="primary" (click)="sendMessage()">
+                <img src="/images/rightarrow.png" alt="Send" class="icons" />
+              </button>
+            </span>
+          </mat-form-field>
+        </form>
       </div>
     </div>
 
