--- a/src/app/shared/modals/sql-modal/sql-modal.component.html
+++ b/src/app/shared/modals/sql-modal/sql-modal.component.html
@@ -2,11 +2,17 @@
   <div class="modal-container" (click)="$event.stopPropagation()">
     <div class="modal-header">
       <h2>SQL Query for your request</h2>
-      <button class="close-button" (click)="onCancel()">×</button>
+
+      <button *ngIf="isDialog" mat-icon-button mat-dialog-close class="close-button">
+        <mat-icon>close</mat-icon>
+      </button>
+      <button *ngIf="!isDialog" mat-icon-button class="close-button" (click)="onCancel()">
+        <mat-icon>close</mat-icon>
+      </button>
     </div>
+
     <div class="modal-body">
       <div class="sql-container">
-     
         <pre><code class="sql-code">
 <span class="keyword">SELECT</span> [No_], [Name], [Vendor Name], [Start Date],[End Date]
 <span class="keyword">FROM</span> [Contract Header]
@@ -15,6 +21,7 @@
         </code></pre>
       </div>
     </div>
+
     <div class="modal-footer">
       <button class="btn btn-cancel" (click)="onCancel()">CANCEL</button>
       <button class="btn btn-copy" (click)="onCopyQuery()">COPY QUERY</button>
