--- a/src/app/shared/modals/sql-modal/sql-modal.component.scss
+++ b/src/app/shared/modals/sql-modal/sql-modal.component.scss
@@ -9,60 +9,60 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
- 
 }
-h2{
-   font-family: "General Sans", "Helvetica Neue", sans-serif;
-}
+
 .modal-container {
+  position: relative;
   background-color: white;
   border-radius: 15px;
-  width: 660px;
-
-  max-width: 100%;
+  width: 550px;
+  max-width: 90%;
   overflow: hidden;
+
 }
 
 .modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 24px;
-  border-bottom: 1px solid #f0f0f0;
+  padding: 16px 24px;
 }
-
-.modal-header h2 {
+ h2 {
   margin: 0;
-  font-size: 18px;
-  font-weight: 500;
-  color: #333;
+  font-size: 20px;
+  font-weight:600;
+  color: rgba(51, 51, 51, 1);
+  line-height: 100%;
+  letter-spacing: 0%;
+  padding: 20px;
+  font-family: "General Sans", "Helvetica Neue", sans-serif;
 }
 
 .close-button {
-  background: none;
-  border: none;
-  font-size: 24px;
-  color: #999;
-  cursor: pointer;
-  padding: 0;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: gray;
+  z-index: 1;
 }
 
 .modal-body {
   padding: 16px 24px;
-  border: 1px gray;
+ 
 }
 
 .sql-container {
+  border: 1px solid rgba(51, 51, 51, 0.16);
+  padding: 10px 10px 10px 20px;
+  border-radius: 15px;
   background-color: white;
-  border-radius: 20px;
-  padding: 16px;
   overflow-x: auto;
 }
 
 pre {
   margin: 0;
   white-space: pre-wrap;
-  font-family: monospace;
+  font-family: "General Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
   line-height: 1.5;
   color: #333;
@@ -86,31 +86,24 @@ pre {
 
 .btn {
   padding: 10px 16px;
-
   border-radius: 20px;
   border: none;
   cursor: pointer;
   font-size: 14px;
   text-transform: uppercase;
-margin-bottom: 25px;
- 
+  text-decoration: none;
+  font-family: "General Sans", "Helvetica Neue", sans-serif;
+  font-weight: 600;
+  width: 250px;
+  gap:10px;
 }
 
 .btn-cancel {
   background-color: #00a9a4;
   color: white;
-  width:350px;
-
- 
-  font-family: "General Sans", "Helvetica Neue", sans-serif;
-  font-weight: 600;
 }
 
 .btn-copy {
   background-color: #0277bd;
   color: white;
-    width:350px;
-     
-  font-family: "General Sans", "Helvetica Neue", sans-serif;
-  font-weight: 600;
 }
