--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -1,30 +1,28 @@
 <div class="chat-sidebar" [class.sidebar-collapsed]="!sidebarOpen">
   <div class="chat-sidebar-header">
-  
     <h2 *ngIf="sidebarOpen">Chat history</h2>
-      <button mat-icon-button aria-label="Toggle sidebar" (click)="toggleSidebar()">
+    <button mat-icon-button aria-label="Toggle sidebar" (click)="toggleSidebar()">
       <img *ngIf="sidebarOpen" src="images/closeplaybutton.png" alt="Close Sidebar" class="icons" />
       <img *ngIf="!sidebarOpen" src="images/playbutton.png" alt="Open Sidebar" class="icons" />
     </button>
   </div>
 
-  <!-- <div class="search-container" *ngIf="sidebarOpen">
-    <mat-form-field appearance="outline">
-      <input matInput placeholder="Search..." [(ngModel)]="searchText">
-      <button mat-icon-button matSuffix (click)="search()">
-        <mat-icon>search</mat-icon>
-      </button>
-    </mat-form-field>
+  <!-- <div *ngIf="isLoading && sidebarOpen" class="loading">
+    <mat-spinner diameter="30"></mat-spinner>
   </div> -->
 
-  <div class="chat-groups" *ngIf="sidebarOpen">
+  <div *ngIf="error && sidebarOpen" class="error">
+    {{ error }}
+  </div>
+
+  <div class="chat-groups" *ngIf="sidebarOpen && !isLoading && !error">
     <div *ngFor="let group of chatGroups; let i = index" class="chat-group">
       <div class="group-title">{{ group.title }}</div>
       
       <mat-list>
-        <mat-list-item *ngFor="let message of group.messages; let msgIndex = index" class="chat-message">
-          <div class="message-text" [class.truncated]="message.truncated">{{ message.text }}</div>
-          <mat-icon class="delete-icon" (click)="deleteMessage(i, msgIndex)">delete</mat-icon>
+        <mat-list-item *ngFor="let conversation of group.conversations; let convIndex = index" class="chat-message">
+          <div class="conversation-title">{{ conversation.conversation_title }}</div>
+          <mat-icon class="delete-icon" (click)="deleteConversation(i, convIndex)">delete</mat-icon>
         </mat-list-item>
       </mat-list>
     </div>
