--- a/src/app/shared/modals/sql-modal/sql-modal.component.scss
+++ b/src/app/shared/modals/sql-modal/sql-modal.component.scss
@@ -1,15 +1,15 @@
-.modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
+// .modal-backdrop {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.5);
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   z-index: 1000;
+// }
 
 .modal-container {
   position: relative;
@@ -59,14 +59,7 @@
   overflow-x: auto;
 }
 
-pre {
-  margin: 0;
-  white-space: pre-wrap;
-  font-family: "General Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
-  color: #333;
-}
+
 
 .sql-code {
   display: block;
@@ -77,12 +70,6 @@ pre {
   font-weight: bold;
 }
 
-.modal-footer {
-  display: flex;
-  justify-content: flex-end;
-  padding: 16px 24px;
-  gap: 12px;
-}
 
 .btn {
   padding: 10px 16px;
@@ -107,3 +94,83 @@ pre {
   background-color: #0277bd;
   color: white;
 }
+
+
+
+
+
+
+
+
+
+.sql-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+
+
+
+//  h2 {
+//   margin: 0;
+//   font-size: 20px;
+//   font-weight:600;
+//   color: rgba(51, 51, 51, 1);
+//   line-height: 100%;
+//   letter-spacing: 0%;
+//   padding: 20px;
+//   font-family: "General Sans", "Helvetica Neue", sans-serif;
+// }
+
+.sql-modal-content {
+  position: relative;
+  background-color: white;
+  border-radius: 15px;
+  width: 550px;
+  max-width: 90%;
+  overflow: hidden;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 24px;
+}
+
+.sql-content {
+  padding: 16px;
+  overflow: auto;
+  flex-grow: 1;
+}
+
+pre {
+  margin: 0;
+  white-space: pre-wrap;
+  font-family: "General Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #333;
+}
+  
+  
+  .no-query-message {
+    text-align: center;
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px 24px;
+  gap: 12px;
+}
+
